Fri Mar  8 10:07:37 EST 2002 - CL
  + Removed includes for features.h and endian.h from include/lib9.h.
    Now mk compiles on Solaris for me.

Tue Jul  3 10:26:47 EDT 2001 - CL
  + Stripped out unnecessary .o files (leaving source files in place but
    not used)
  + Changed fprint to printf or fprintf.
  + Removed bug in function squote, sh.c line 28 -- first n was added twice
  + Need to do: introduce dependencies on .h files