@@ -1,3 +1,8 @@
+Mon Mar 11 10:55:20 EST 2002 - CL
+  + Checked compilation with lcc(1) on Linux and cc(1) on SunOS 5.5.1.
+    Call to mkdir(2) missed 2nd parameter. Definition of ulon in lib9.h
+    adjusted for lcc(1). 
+
 Fri Mar  8 10:07:37 EST 2002 - CL
   + Removed includes for features.h and endian.h from include/lib9.h.
     Now mk compiles on Solaris for me.
